--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -5,7 +5,8 @@
 }
 
 .container {
-  z-index: 10000;
+  --monday-modal-z-index: 10000;
+  z-index: var(--monday-modal-z-index);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -47,20 +48,19 @@
   }
 }
 
-
-@keyframes overlay-fade-in{
-  from{
+@keyframes overlay-fade-in {
+  from {
     opacity: 0;
   }
-  to{
+  to {
     opacity: 1;
   }
 }
-@keyframes overlay-fade-out{
-  from{
+@keyframes overlay-fade-out {
+  from {
     opacity: 1;
   }
-  to{
+  to {
     opacity: 0;
   }
 }
