--- a/src/components/Toast/__stories__/toast.stories.scss
+++ b/src/components/Toast/__stories__/toast.stories.scss
@@ -3,7 +3,6 @@
 .monday-storybook-toast {
   &_wrapper {
     position: static;
-    width: 390px;
     transform: translate(0, 0);
     // overriding margin for storybook wrapper
     margin-right: auto !important;
@@ -13,13 +12,6 @@
   &_negative_rule {
     margin-bottom: 0;
     margin-top: 0;
-    &.big {
-      width: 420px;
-      // TODO remove override
-      .monday-style-toast-content {
-        justify-content: center;
-      }
-    }
   }
 
   &_toast-line-wrapper {
@@ -32,5 +24,8 @@
 
   &_box {
     width: 390px;
+    // overriding margin for storybook wrapper
+    margin-right: auto !important;
+    margin-left: auto !important;
   }
 }
